--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,5 +87,8 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
+          DT_API_KEY_SECRET: ${{ secrets.DT_API_KEY_SECRET }}
+          DT_API_KEY_ID: ${{ vars.DT_API_KEY_ID }}
+          DT_OIDC_EMAIL: ${{ vars.DT_OIDC_EMAIL }}
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
