--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
             (echo; echo "Unexpected difference in directories after code generation. Run 'make generate' command and commit."; exit 1)
 
   # Run acceptance tests in a matrix with Terraform CLI versions
-  test:
+  test-safe:
     name: Terraform Provider Acceptance Tests
     needs: build
     runs-on: ubuntu-latest
@@ -90,5 +90,28 @@ jobs:
           DT_API_KEY_SECRET: ${{ secrets.DT_API_KEY_SECRET }}
           DT_API_KEY_ID: ${{ vars.DT_API_KEY_ID }}
           DT_OIDC_EMAIL: ${{ vars.DT_OIDC_EMAIL }}
-        run: go test -v -cover ./internal/provider/
+        run: go test -v -cover ./internal/provider/ --run '^TestAccSafe'
+        timeout-minutes: 10
+  test-non-parallel:
+    name: Terraform Provider Non-Parallel Acceptance Tests
+    needs: build
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
+        with:
+          terraform_version: "1.10.*"
+          terraform_wrapper: false
+      - run: go mod download
+      - env:
+          TF_ACC: "1"
+          DT_API_KEY_SECRET: ${{ secrets.DT_API_KEY_SECRET }}
+          DT_API_KEY_ID: ${{ vars.DT_API_KEY_ID }}
+          DT_OIDC_EMAIL: ${{ vars.DT_OIDC_EMAIL }}
+        run: go test -v -cover ./internal/provider/ --run 'TestAccMemberRoleBindingResource'
         timeout-minutes: 10
